--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" 
     crossorigin="anonymous">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <title>TITLE</title>
+  <title>Movie Tickets</title>
 </head>
 <body>
   <section class="main">
